Adds network calls and error messages

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "axios": "^0.21.0",
+    "axios-debug-log": "^0.8.2",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
